Button cut off fix

--- a/styles.css
+++ b/styles.css
@@ -1670,7 +1670,7 @@ html {
     #previous-management-step, #next-management-step, #finish-management-interview,
     #previous-live-step, #next-live-step, #finish-live-interview,
     #field-prev-step, #field-next-step, #finish-phone-check {
-        margin-bottom: calc(20px + env(safe-area-inset-bottom, 40px)) !important;
+        margin-bottom: calc(40px + env(safe-area-inset-bottom, 80px)) !important;
     }
     
     /* Form elements at bottom of screen */
